
        * fix wrong size calc in naviframe when an item have setted
          tittle_visible_set to false.

2012-09-24  Flavio Ceolin

        * elementary_codegen: Adding support for box and table.

2012-09-25  Cedric Bail

        * Escape theme filename correctly.

2012-09-27  Jaehwan Kim

        * Add the toolbar API which expand the transverse length

2012-09-28  Shinwoo Kim (kimcinoo)

        * Fix disk selector selection of middle item when obj not at 0.

2012-09-28   Jihyeon Seol

        * Fix list corruption issue in multibuttonentry.

2012-09-28  Bruno Dilly

        * add elm_bg as external

2012-10-03  Michael Bouchaud (yoz)

        * add elm_calendar_displayed_time_get
        * add a signal display,changed to elm_calendar

2012-10-02  Bruno Dilly

        * add policy for elm_exit

2012-10-03  Bruno Dilly

        * fix init counts
        * immediately shutdown elm on external shutdown

2012-10-04  Igor Murzov

	* fix copy&paste error in elm_flip.
	* fix possible invalid memory access in elm_access.

2012-10-04  Cedric Bail

	* Add a color picker to elm_colorselector.

2012-10-04  Sebastian Dransfeld

	* Use ecore_x_selection_converter_text to convert text data so we can
	  support COMPOUND_TEXT

2012-10-08  Bruno Dilly

        * fix elm_spinner_special_value_add()
        * add elm_spinner_special_value_get() / del()

2012-10-10  Shinwoo Kim (kimcinoo)

        * Add access features to multibuttonentry
        * Fix diskselector bug on round with appended items with more
        than 4 items.

2012-10-12  Michael Bouchaud (yoz)

        * Add elm_map_name_search

2012-10-12  Shinwoo Kim (kimcinoo)

        * Fix conform widget to be part of focus chain.

2012-10-13  ChunEon Park (Hermet)

        * Fix the transit to launch the effect directly when elm_transit_go is called.

2012-10-14  Jiyoun Park (jypark)

        * Add display mode change feature related with keypad state change
	to elm conformant and naviframe.